--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "postcss-nested": "^3.0.0"
   },
   "scripts": {
     "lint-staged": "$(yarn bin)/lint-staged"
@@ -29,7 +30,6 @@
     "lint-staged"
   ],
   "devDependencies": {
-    "webpack-dev-server": "^2.9.1",
     "babel-eslint": "^8.0.1",
     "eslint": "^4.8.0",
     "eslint-config-airbnb-base": "^12.0.1",
@@ -41,6 +41,7 @@
     "pre-commit": "^1.2.2",
     "prettier": "^1.7.3",
     "stylelint": "^8.1.1",
-    "stylelint-config-standard": "^17.0.0"
+    "stylelint-config-standard": "^17.0.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
