Add example for `postcss-inline-svg`

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
     "normalize.css": "^7.0.0",
-    "postcss-nested": "^3.0.0"
+    "postcss-inline-svg": "^3.0.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-svgo": "^2.1.6"
   },
   "scripts": {
     "lint-staged": "$(yarn bin)/lint-staged"
