--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "^3.2.0",
     "actioncable": "^5.1.4",
     "normalize.css": "^7.0.0",
+    "postcss-inline-svg": "^3.0.0",
     "postcss-nested": "^3.0.0"
   },
   "scripts": {
